    documented as unsafe.
  * documentation: SB-SYS:WITHOUT-GCING has been documented as unsafe
    in multithreaded application code.
  * optimization: GET-INTERNAL-REAL-TIME has been optimized on POSIX
    platforms. (thanks to James Anderson for the optimization hint)
  * optimization: REPLACE, SUBSEQ, and COPY-SEQ are now optimized in
    more cases.
  * enhancement: XREF information is now collected to references made
    to global variables using SYMBOL-VALUE with a constant argument.
  * bug fix: dead unbound variable references now signal an error.
    (reported by Marco Monteiro)
  * bug fix: / with an unused value was being deleted in safe code.
    (thanks to Marco Monteiro and Kevin Reid)
  * bug fix: number of characters that can be written onto a single
    line in a file is unlimited.
  * bug fix: some GC deadlocks caused by asynchronous interrupts have
    been fixed by inhibiting interrupts for when GC is disbled.
  * bug fix: GETHASH, PUTHASH, CLRHASH and REMHASH are now interrupt safe.
  * bug fix: binding *BREAK-ON-SIGNALS* to a value that is not a type
    specifier no longer causes infinite recursion.
  * improvement: the x86-64/darwin port now passes all tests and
    should be considered non-experimental.

changes in sbcl-1.0.4 relative to sbcl-1.0.3:
  * new platform: experimental support for x86-64/darwin (MacOS).
  * incompatible change: the thread-safe (on most platforms) getaddrinfo
    and getnameinfo sockets functions are used instead of gethostbyaddr
    and gethostbyname, on platforms where the newer functions are available.
    As a result, the ALIASES field of HOST-ENT will always be NIL on these
    platforms.
  * change: runtimes with embedded cores (i.e. saved with :EXECUTABLE T)
    don't print the startup banner, but behave as if --noinform was passed
    as a command line argument. (thanks to Kevin Reid)
  * new experimental feature: added JOIN-THREAD (by NIIMI Satoshi)