@@ -14,6 +14,10 @@ changes in sbcl-1.0.5 relative to sbcl-1.0.4:
     platforms. (thanks to James Anderson for the optimization hint)
   * optimization: REPLACE, SUBSEQ, and COPY-SEQ are now optimized in
     more cases.
+  * optimization: STRING-{EQUAL,LESSP,GREATER-P} and their NOT-
+    variants no longer cons.
+  * optimization: Direct calls to CHAR-{EQUAL,LESSP,GREATERP} and
+    their NOT- variants no longer cons.
   * enhancement: XREF information is now collected to references made
     to global variables using SYMBOL-VALUE with a constant argument.
   * bug fix: dead unbound variable references now signal an error.
